--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.6",
+    "com.unity.toolchain.linux-x86_64": "2.0.6",
     "com.unity.visualscripting": "1.9.1",
     "com.unity.xr.hands": "1.4.0",
     "com.unity.xr.interaction.toolkit": "2.5.3",
